--- a/README
+++ b/README
@@ -4,7 +4,7 @@ Installation:
 
 Create symlinks:
 
-    ln -s ~/.dm-dotfiles/vim ~/.vim
+    ln -s .dm-dotfiles/vim ~/.vim
     ln -s .dm-dotfiles/bash/bashrc ~/.bashrc
     ln -s .dm-dotfiles/screen/screenrc ~/.screenrc
     ln -s .vim/vimrc ~/.vimrc
