--- a/README
+++ b/README
@@ -22,7 +22,7 @@ the pyflakes python module; The sed is necessary because it assumes write access
     git submodule update --init
 
 Add this to your crontab to auto-update everyday at 3am.
-    0 3 * * * echo $(cd ~/.dm-dotfiles && git pull) >/dev/null
+    0 3 * * * echo $(cd ~/.dm-dotfiles && git pull https://github.com/dmayle/dm-dotfiles) >/dev/null
 
 Software required:
     Mac:
