--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Switch to the `~/.dm-dotfiles` directory, and fetch submodules:
     git submodule update --init
 
 Add this to your crontab to auto-update everyday at 3am.
-    0 3 * * * echo $(cd ~/.dm-dotfiles && (git pull https://github.com/dmayle/dm-dotfiles; git submodule update --init)) >/dev/null
+    0 3 * * * (cd ~/.dm-dotfiles && (git pull https://github.com/dmayle/dm-dotfiles; git submodule update --init)) &>/dev/null
 
 Software required:
     Mac:
