Start a base tmux config

--- a/README
+++ b/README
@@ -12,6 +12,9 @@ Create symlinks:
     ln -s .dotfiles/inputrc ~/.inputrc
     ln -s .dotfiles/editrc ~/.editrc
     ln -s .dotfiles/crontab ~/.crontab
+    ln -s .dotfiles/tmux/outer.conf ~/.tmux-outer.conf
+    ln -s .dotfiles/tmux/shared.conf ~/.tmux-shared.conf
+    ln -s .dotfiles/tmux/inner.conf ~/.tmux-inner.conf
     ln -s .vim/vimrc ~/.vimrc
 
 Switch to the `~/.dotfiles` directory, and fetch submodules:
